Small fixes to helperlauncher. 1. handling of arguments improved 2. hides windows options on non-windows machines. 3. using common build file.